# MANA

./: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  compile.sh  config.h
GenGraph/: align_batch.cc  bwt.cc  bwt.h  bwt_search.cc  bwt_search.h  clump.cc  clump.h  concatenator.cc  concatenator.h  contig_refinement.cc  contig_refinement.h  correct_sequence.cc  database_index.cc  database_index.h  debruijn_graph.cc  gapped_pattern.h  gsa.cc  gsa.h  interval_array.cc  interval_array.h  iterative_assembly.cc  kmer.cc  kmer_filtering.cc  kmer_unitcoder.cc  main_GenGraph.cc  main_assemble.cc  main_build.cc  minimizer_sort.cc  minimizer_sort.h  overlap.cc  overlap.h  scoring_prot.h  seq_align.h  sequence_search.cc  sequence_search.h  sfa.cc  sfa.h  sfa_build.cc  sfa_build.h  string_graph.cc  (+2 more)
MANA/: mana.cpp  mana.cpp~  preprocess.cpp  preprocess.cpp~  preprocess.h  preprocess.h~
Test/: test.fa  test2.fa
Util/: Alphabet.cpp  Alphabet.cpp~  Alphabet.h  SeqReader.cpp  SeqReader.cpp~  SeqReader.h  SeqReader.h~
index/: test.fa.0.gsa  test.fa.0.lcp  test.fa.0.mcp  test.fa.1.gsa  test.fa.1.lcp  test.fa.1.mcp  test.fa.gsa  test.fa.lcp  test.fa.mcp
